v1-mvp/terraform-prod/security.tf
resource "aws_security_group" "main" {
  description = "launch-wizard-1 created 2026-01-19T07:53:13.037Z"
  name        = "launch-wizard-1"
  vpc_id      = aws_vpc.main.id

  egress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
  }

  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
  }

  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
  }

  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
  }

  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    description = "temporary"
    from_port   = 8080
    to_port     = 8081
    protocol    = "tcp"
  }

  tags = {
    Name        = "prod-sg-main"
    Environment = var.environment
  }
}

resource "aws_security_group" "default" {
  description = "default VPC security group"
  name        = "default"
  vpc_id      = aws_vpc.main.id

  ingress {
    protocol  = -1
    self      = true
    from_port = 0
    to_port   = 0
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
